--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,8 @@
 [local]
 localhost
 
+[frontend]
+54.198.110.53 COURSE=Ansible DURATION=10HR TRAINER=Sivakumar ansible_user=ec2-user ansible_password=DevOps321
 
 [local:vars]
 COURSE=variables
